--- a/index.html
+++ b/index.html
@@ -1,73 +1,57 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hit Da Golf - Beta game</title>
 
-	<meta charset="utf-8">
-	<meta http-equiv="content-type" content="text/html;charset=utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="description" content="Learning JavaScript.!">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="simple-js-hit-game : simple interactive game developed using HTML, CSS and JavaScript. ">
 
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	
-</head>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-<body>
-<div id="wrapper">
-	<!-- audio player-->
-	<audio id="player" autoplay loop src="music/musicbg.ogg"></audio>
-	<!-- audio player controls-->
-	<div id="controls">
-		<img src="images/sound.png" id="sound">	
-		<img src="images/mute.png" id="mute">	
-	</div>
-	
+    <title>simple-js-hit-game</title>
+  </head>
 
-	<!-- first screen with transparent background -->
-	<div id="cover">
-		<a href="#" id="play"><img src="images/play.png"></a>
-		<img src="images/cover.png" style="background-repeat:repeat">
-	</div>
+  <body>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/santup/simple-js-hit-game">View on GitHub</a>
 
-	<!-- last screen with transparent background -->
-	<div id="result">
-		<div id="resultbg">
-			<h1 id="resulthone">000</h1><h4>sec</h4>
-			<a href="#" id="hitagain"><img src="images/playagain.png"></a>	
-		</div>
-		<img src="images/cover2.png" >
-	</div>
+          <h1 id="project_title">simple-js-hit-game</h1>
+          <h2 id="project_tagline">simple interactive game developed using HTML, CSS and JavaScript. </h2>
 
-	<!-- logo-->
-	<div id="logo">
-		<img src="images/headboard.png">
-	</div>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/santup/simple-js-hit-game/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/santup/simple-js-hit-game/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-	<!-- golf ball-->
-	<div>	
-		<a href="#"><img src="images/golfball.png"  id="golf"/></a>	
-	</div>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>
+<a id="hit-da-golf-" class="anchor" href="#hit-da-golf-" aria-hidden="true"><span class="octicon octicon-link"></span></a>"Hit Da Golf" </h1>
 
-	<!-- hits remaining : number TEXT-->
-	<div id="remain">
-			<p id="ir">Hits remaining:</p>
-			<p id="no">5</p>
-			
-	</div>	
+<h5>
+<a id="current-version-beta" class="anchor" href="#current-version-beta" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current version: beta</h5>
 
-	<!-- time taken to click TEXT display-->
-	<div id="score">
-			<img src="images/bird.png" id="bird">
-			<h1 id="hone">0.000</h1>
-			<h4>seconds</h4>
-	</div>	
+<p>"Hit Da Golf" is a beta version, simple interactive game developed using HTML, CSS and JavaScript. User's every hit time is calculated and Based on number of user hits with speed, average of hit speed is calculated. </p>
 
-	<!-- character-->
-	<img src="images/me.png" id="dme"/>
-</div>	
-	<script src="js/script.js"></script>
+<p>Follow news and developments on twitter: <a href="https://twitter.com/santup009" target="_blank">@santup</a></p>
+      </section>
+    </div>
 
-</body>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">simple-js-hit-game maintained by <a href="https://github.com/santup">santup</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
