--- a/index.html
+++ b/index.html
@@ -1,44 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>simple-js-hit-game by santup</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="simple-js-hit-game : simple interactive game developed using HTML, CSS and JavaScript. ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>simple-js-hit-game</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>simple-js-hit-game</h1>
-        <p>simple interactive game developed using HTML, CSS and JavaScript. </p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/santup/simple-js-hit-game">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">simple-js-hit-game</h1>
+          <h2 id="project_tagline">simple interactive game developed using HTML, CSS and JavaScript. </h2>
 
-        <a href="https://github.com/santup/simple-js-hit-game" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/santup/simple-js-hit-game/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/santup/simple-js-hit-game/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/santup/simple-js-hit-game/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/santup/simple-js-hit-game/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="hit-da-golf-" class="anchor" href="#hit-da-golf-" aria-hidden="true"><span class="octicon octicon-link"></span></a>"Hit Da Golf" </h1>
 
@@ -49,12 +41,17 @@
 
 <p>Follow news and developments on twitter: <a href="https://twitter.com/santup009" target="_blank">@santup</a></p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/santup">santup</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">simple-js-hit-game maintained by <a href="https://github.com/santup">santup</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
+
   </body>
 </html>
