--- a/index.html
+++ b/index.html
@@ -1,44 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>simple-js-hit-game by santup</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
+    <title>simple-js-hit-game by santup</title>
   </head>
+
   <body>
 
-      <header>
+    <header>
+      <div class="container">
         <h1>simple-js-hit-game</h1>
-        <p>simple interactive game developed using HTML, CSS and JavaScript. </p>
-      </header>
+        <h2>simple interactive game developed using HTML, CSS and JavaScript. </h2>
 
-      <div id="banner">
-        <span id="logo"></span>
+        <section id="downloads">
+          <a href="https://github.com/santup/simple-js-hit-game/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/santup/simple-js-hit-game/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/santup/simple-js-hit-game" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-        <a href="https://github.com/santup/simple-js-hit-game" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/santup/simple-js-hit-game/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/santup/simple-js-hit-game/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a id="hit-da-golf-" class="anchor" href="#hit-da-golf-" aria-hidden="true"><span class="octicon octicon-link"></span></a>"Hit Da Golf" </h1>
 
@@ -49,12 +38,8 @@
 
 <p>Follow news and developments on twitter: <a href="https://twitter.com/santup009" target="_blank">@santup</a></p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/santup">santup</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
   </body>
 </html>
