Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 <p>"Hit Da Golf" is a beta version, simple interactive game developed using HTML, CSS and JavaScript. User's every hit time is calculated and Based on number of user hits with speed, average of hit speed is calculated. </p>
 
+<p><a href="santoshparashetti.me/udemy-course/reaction-tester/" target="_blank">ONLINE DEMO</a></p>
+
 <p>Follow news and developments on twitter: <a href="https://twitter.com/santup009" target="_blank">@santup</a></p>
       </section>
     </div>
