--- a/index.html
+++ b/index.html
@@ -1,60 +1,51 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="simple-js-hit-game : simple interactive game developed using HTML, CSS and JavaScript. ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>simple-js-hit-game</title>
+    <title>simple-js-hit-game by santup</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/santup/simple-js-hit-game">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>simple-js-hit-game</h1>
+        <h2>simple interactive game developed using HTML, CSS and JavaScript. </h2>
 
-          <h1 id="project_title">simple-js-hit-game</h1>
-          <h2 id="project_tagline">simple interactive game developed using HTML, CSS and JavaScript. </h2>
+        <section id="downloads">
+          <a href="https://github.com/santup/simple-js-hit-game/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/santup/simple-js-hit-game/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/santup/simple-js-hit-game" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/santup/simple-js-hit-game/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/santup/simple-js-hit-game/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a id="hit-da-golf-" class="anchor" href="#hit-da-golf-" aria-hidden="true"><span class="octicon octicon-link"></span></a>"Hit Da Golf" </h1>
 
 <h5>
 <a id="current-version-beta" class="anchor" href="#current-version-beta" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current version: beta</h5>
 
+<p><img src="https://lh3.googleusercontent.com/-4L-_R4Pvhm8/VGOzUbEHqkI/AAAAAAAABeo/4YJ4ylqyv-s/w512-h279-no/js-hit-game.jpg" alt="Image preview is not available"></p>
+
 <p>"Hit Da Golf" is a beta version, simple interactive game developed using HTML, CSS and JavaScript. User's every hit time is calculated and Based on number of user hits with speed, average of hit speed is calculated. </p>
 
-<p><img src="https://lh3.googleusercontent.com/-4L-_R4Pvhm8/VGOzUbEHqkI/AAAAAAAABeo/4YJ4ylqyv-s/w512-h279-no/js-hit-game.jpg" alt="Image preview is not available">
-<a href="http://santoshparashetti.me/udemy-course/reaction-tester/" target="_blank">ONLINE DEMO</a></p>
+<p><a href="http://santoshparashetti.me/udemy-course/reaction-tester/" target="_blank">ONLINE DEMO</a></p>
+
+<hr>
 
 <p>Follow news and developments on twitter: <a href="https://twitter.com/santup009" target="_blank">@santup</a></p>
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">simple-js-hit-game maintained by <a href="https://github.com/santup">santup</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
     
-
   </body>
 </html>
