Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <hr>
 
-<p>Follow news and developments on twitter: <a href="https://twitter.com/santup009" target="_blank">@santup</a></p>
+<p>Follow news and developments on twitter: <a href="https://twitter.com/santuparashetti" target="_blank">@santuparashetti</a></p>
       </section>
     </div>
 
